Fixed Spacing Issues

--- a/Styles/_intro.scss
+++ b/Styles/_intro.scss
@@ -1,6 +1,6 @@
 .intro {
   height: 94vh;
-  background: url("./img/grey-scale-photo-of-person-holding-smartphone-1100447.jpg");
+  background: url("../img/grey-scale-photo-of-person-holding-smartphone-1100447.jpg");
   background-size: cover;
   background-attachment: fixed;
   color: white;
