--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -204,10 +204,10 @@ footer {
   .text-wrap {
     height: 80%;
     .phone-x-text h1 {
-      font-size: 4rem;
+      font-size: 3rem;
     }
     .text-link h3 {
-      font-size: 1rem;
+      font-size: 2rem;
     }
   }
   .right {
